# postgres-upgrader

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  todo.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: tests.yml
src/: docker_utils.py
src/postgres_updater/: __init__.py  compose_inspector.py  docker_utils.py  prompt.py
src/postgres_upgrader/: __init__.py  __main__.py  cli.py  compose_inspector.py  docker.py  env.py  postgres.py  prompt.py
tests/: conftest.py  test_cli.py  test_docker.py  test_parse_docker_compose.py  test_postgres.py  test_subprocess_integration.py  test_user_choice.py  test_user_interaction.py
